@@ -1,15 +1,15 @@
 package jp.posl.jprophet;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+
+import jp.posl.jprophet.patch.PatchCandidate;
 
 public class StagedCondGenerator {
     public StagedCondGenerator() {
         
     }
-    public List<RepairCandidate> applyConditionTemplate(RepairCandidate repairCandidate){
-        return new ArrayList<>(Arrays.asList(repairCandidate));
+    public List<PatchCandidate> applyConditionTemplate(PatchCandidate patchCandidate){
+        return List.of(patchCandidate);
     }
     
 }
